refactor: modernize for java 11